--- a/reactapp/src/sass/layout/_hero.scss
+++ b/reactapp/src/sass/layout/_hero.scss
@@ -36,6 +36,7 @@
   background: rgba(81, 144, 99, 0.4);
   display: inline-block;
   border: none;
+  outline: none;
 
   &:hover {
     box-shadow: 0 0 1rem rgba(0, 0, 0, .3);
