--- a/reactapp/src/sass/components/_post.scss
+++ b/reactapp/src/sass/components/_post.scss
@@ -8,10 +8,11 @@
   grid-template-columns: auto 10vw 10vw 10vw 15vw;
   grid-template-rows: 7rem 7rem;
   border-radius: 3px;
+  color: white;
 
   &__title {
-    margin: 0;
-    font-size: 3rem;
+    margin: 1rem 3rem 0 2rem;
+    padding: 0;
     grid-column-start: 1;
     grid-column-end: 1;
     grid-row-start: 1;
@@ -28,7 +29,7 @@
   }
 
   &__album {
-    margin: 0;
+    margin: 0 0 0 0;
     font-size: 2rem;
     grid-column-start: 3;
     grid-column-end: 3;
@@ -37,26 +38,28 @@
   }
 
   &__user {
-    margin: 0;
+    margin: -2rem 0 0 2rem;
     font-size: 1.4rem;
-    grid-column-start: 4;
-    grid-column-end: 4;
-    grid-row-start: 1;
-    grid-row-end: 1;
+    grid-column-start: 1;
+    grid-column-end: 1;
+    grid-row-start: 2;
+    grid-row-end: 2;
   }
 
   &__img {
-    margin: 0;
+    margin: 1rem;
+    background-image: url("../../blank.jpg");
+    max-width: 16rem;
     grid-column-start: 5;
     grid-column-end: 5;
     grid-row-start: 1;
-    grid-row-end: 2;
+    grid-row-end: 3;
   }
 
   &__service {
     margin: 0;
-    grid-column-start: 1;
-    grid-column-end: 1;
+    grid-column-start: 3;
+    grid-column-end: 3;
     grid-row-start: 2;
     grid-row-end: 2;
   }
