creating about sections

--- a/reactapp/src/sass/main.scss
+++ b/reactapp/src/sass/main.scss
@@ -6,6 +6,7 @@
 @import "base/utilities";
 
 @import "components/post";
+@import "components/about";
 
 @import "layout/hero";
 @import "layout/user";
