--- a/reactapp/src/sass/main.scss
+++ b/reactapp/src/sass/main.scss
@@ -7,6 +7,7 @@
 
 @import "components/post";
 @import "components/about";
+@import "components/footer";
 
 @import "layout/hero";
 @import "layout/user";
